@@ -549,9 +549,6 @@ public class BuildJobsTest extends CascadingTestCase
 
   public void testCoGroupAroundCoGroupAroundCoGroup() throws Exception
     {
-    if( true )
-      return;
-
     Tap sourceLower = new Hfs( new TextLine( new Fields( "offset", "line" ) ), "foo" );
     Tap sourceUpper = new Hfs( new TextLine( new Fields( "offset", "line" ) ), "bar" );
 
@@ -575,6 +572,8 @@ public class BuildJobsTest extends CascadingTestCase
     splice1 = new Each( splice1, new Identity() );
 
     Pipe splice2 = new CoGroup( splice1, new Fields( "num1" ), pipeUpper2, new Fields( "num" ), new Fields( "num1", "char1", "num2", "char2", "num3", "char3" ) );
+
+    splice2 = new Each( splice2, new Identity() );
 
     splice2 = new CoGroup( splice2, new Fields( "num1" ), splice1, new Fields( "num1" ), new Fields( "num1", "char1", "num2", "char2", "num3", "char3", "num4", "char4", "num5", "char5" ) );
 
