@@ -2,6 +2,9 @@ Cascading Change Log
 
 unreleased
 
+  Fixed bug in c.f.MultiMapReducePlanner where too many temp tap instances were being inserted while normalizing
+  the flow sources.
+
   Changed c.t.Fields to fail if given duplicate field names.
 
   Changed behavior if Hadoop FileInputSplit is not used and property "map.input.file" is not set. If there is one
